Favicon added, bird context

--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
     <link rel="stylesheet" href="./assets/fontawesome/css/brands.min.css">
     <link rel="stylesheet" href="./assets/fontawesome/css/solid.min.css">
     <title>Austin's Dev Site</title>
+    <link rel="shortcut icon" href="./assets/img/favicon.ico">
 </head>
 <body class="font-sans bg-gray-200 dark:bg-slate-900 px-4">
     <div class="flex flex-col items-center justify-center min-h-screen">
         <div class="flex flex-col md:flex-row items-center justify-center gap-24">
             <div class="text-center max-w-md md:text-right">
                 <p class="text-4xl font-bold text-gray-700 dark:text-gray-300 mb-4">Hey there 👋</p>
-                <h1 class="text-6xl font-extrabold mb-8">
+                <h1 class="text-6xl font-extrabold mb-4">
                     <span class="dark:text-white text-gray-700">I'm </span>
-                    <span
-                        class="text-transparent bg-clip-text bg-gradient-to-r dark:from-purple-500 dark:to-pink-500 from-yellow-400 via-[#EEA30C] to-orange-500">Austin</span>
+                    <span class="text-transparent bg-clip-text bg-gradient-to-r dark:from-purple-500 dark:to-pink-500 from-yellow-400 via-[#EEA30C] to-orange-500">
+                        Austin
+                    </span>
                 </h1>
+                <p class="text-2xl font-bold text-gray-700 dark:text-gray-300 mb-8">and this is Percy 👉</p>
                 <div class="flex flex-wrap gap-4 justify-center md:justify-end">
                     <a href="https://github.com/austinaggiss">
                         <button
