--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/fontawesome/css/fontawesome.min.css">
     <link rel="stylesheet" href="./assets/fontawesome/css/brands.min.css">
     <link rel="stylesheet" href="./assets/fontawesome/css/solid.min.css">
-    <title>Austin's Dev Site</title>
+    <title>Austin Aggiss</title>
     <link rel="shortcut icon" href="./assets/img/favicon.ico">
 </head>
 <body class="font-sans bg-gray-200 dark:bg-slate-900 px-4">
