--- a/index.html
+++ b/index.html
@@ -1,42 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preload" href="assets/fonts/Mona-Sans.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="./assets/fontawesome/css/fontawesome.min.css">
-    <link rel="stylesheet" href="./assets/fontawesome/css/brands.min.css">
-    <link rel="stylesheet" href="./assets/fontawesome/css/solid.min.css">
-    <title>Austin Aggiss</title>
-    <link rel="shortcut icon" href="./assets/img/favicon.ico">
+    <title>Austin's Site</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body class="font-sans bg-gray-200 dark:bg-slate-900 px-4">
-    <div class="flex flex-col items-center justify-center min-h-screen">
-        <div class="flex flex-col md:flex-row items-center justify-center gap-24">
-            <div class="text-center max-w-md md:text-right">
-                <p class="text-4xl font-bold text-gray-700 dark:text-gray-300 mb-4">Hey there 👋</p>
-                <h1 class="text-6xl font-extrabold mb-4">
-                    <span class="dark:text-white text-gray-700">I'm </span>
-                    <span class="text-transparent bg-clip-text bg-gradient-to-r dark:from-purple-500 dark:to-pink-500 from-yellow-400 via-[#EEA30C] to-orange-500">
-                        Austin
-                    </span>
-                </h1>
-                <p class="text-2xl font-bold text-gray-700 dark:text-gray-300 mb-8">and this is Percy 👉</p>
-                <div class="flex flex-wrap gap-4 justify-center md:justify-end">
-                    <a href="https://github.com/austinaggiss">
-                        <button
-                            class="transition-all bg-slate-900 text-white dark:bg-white dark:text-black text-xl font-semibold px-4 py-3 rounded-lg hover:text-white hover:bg-gradient-to-r hover:dark:from-purple-500 hover:dark:to-pink-500 hover:from-yellow-400 hover:via-[#EEA30C] hover:to-orange-500">
-                            GitHub <i class="fab fa-github"></i>
-                        </button>
-                    </a>
-                </div>
-            </div>
-            <div class="flex justify-center">
-                <img src="./assets/img/profile.png" height="300" width="300" alt="Product Image"
-                    class="max-w-full h-auto rounded-full">
+<body>
+    <canvas id="background-canvas"></canvas>
+        <div class="container">
+            <h1>Hi, I'm Austin 👋</h1>
+            <p>Student / Developer</p>
+            <div class="separator"></div>
+            <p>
+                This is just a page for projects and other info I might share later :)
+            </p>
+            <div class="social-links">
+                <a href="https://github.com/austinaggiss" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+                <a href="mailto:austin@aggiss.dev"><i class="fas fa-envelope"></i> Email</a>
             </div>
         </div>
-    </div>
+    <script src="./js/animation.js"></script>
 </body>
 </html>
